objects/Related_State_Province__c.object
<CustomObject>
    <fields>
        <fullName>Country__c</fullName>
        <formula>State_Province__r.Country__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <label>District</label>
        <referenceTo>District__c</referenceTo>
        <relationshipLabel>Related States/Provinces</relationshipLabel>
        <relationshipName>Related_States_Provinces</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Last_Synced_D_T__c</fullName>
        <label>Last Synced D/T</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Updated_D_T__c</fullName>
        <label>Last Updated D/T</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <label>Legacy_ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Processed_D_T__c</fullName>
        <label>Processed D/T</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>State_District_Unique_Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>State/District Unique Key</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <label>State/Province</label>
        <referenceTo>State_Province__c</referenceTo>
        <relationshipLabel>Related States/Provinces</relationshipLabel>
        <relationshipName>Related_States_Provinces</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Unique_Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Unique Key</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>View__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Id, &quot;View&quot;, &quot;_top&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View</label>
        <type>Text</type>
    </fields>
    <label>Related State/Province</label>
    <nameField>
        <displayFormat>RS-{000000}</displayFormat>
        <label>Related State/Province Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related States/Provinces</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Cannot_Add_States_to_District_Using_Zips</fullName>
        <active>true</active>
        <errorConditionFormula>District__r.Num_Related_Zip_Postal_Codes__c &gt; 0</errorConditionFormula>
        <errorMessage>Cannot add a Related State/Provinces to a District that is using Related Zip/Postal Codes.</errorMessage>
    </validationRules>
</CustomObject>